--- a/DistributedOrderingSystem/app/src/main/res/values/strings.xml
+++ b/DistributedOrderingSystem/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_table_layout">Table Layout</string>
     <string name="title_activity_table_info">TableInfo</string>
+    <string name="title_activity_queue">Order Queue</string>
 </resources>
